# file-manager

./: CMakeLists.txt
src/: main.cpp  types.h
src/filemanager/: filemanager.cpp  filemanager.h
src/menu/: menu.cpp  menu.h
